--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "appfinancas": "file:",
+    "axios": "^1.7.3",
     "expo": "~51.0.25",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
