--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "appfinancas": "file:",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.25",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -23,10 +24,12 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.1.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-dom": "18.2.0"
   },
   "private": true
 }
